--- a/CreditApplications.Intranet/Views/Article/Edit.cshtml
+++ b/CreditApplications.Intranet/Views/Article/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IntranetViewModel
 
 @{
-    ViewData["Title"] = "Edit article";
+    ViewData["Title"] = "Edytuj artykuł";
     Layout = "_Layout";
 }
 
