--- a/CreditApplications.Intranet/Views/Shared/NavigationTopIdentity.cshtml
+++ b/CreditApplications.Intranet/Views/Shared/NavigationTopIdentity.cshtml
@@ -5,7 +5,7 @@
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
 
                 <li>
-                    <a class="nav-link px-2 @Html.IsActiveTextSecondary("Intranet", "Index")" asp-controller="Intranet" asp-action="Index">
+                    <a class="nav-link px-2 @Html.IsActiveTextSecondary("Intranet", "Index")" asp-controller="Intranet" asp-action="Index" asp-route-id="">
                         Przeglądanie intranetu
                     </a>
                 </li>
