--- a/CreditApplications.Intranet/Views/Intranet/Index.cshtml
+++ b/CreditApplications.Intranet/Views/Intranet/Index.cshtml
@@ -5,6 +5,6 @@
 }
 <div class="">
     <div>
-        @await Html.PartialAsync("ArticlesForPage", @Model.Articles)
+        @await Html.PartialAsync("ArticleOnPage", @Model.Articles)
     </div>
 </div>
