--- a/CreditApplications.Intranet/Views/Shared/_Layout.cshtml
+++ b/CreditApplications.Intranet/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - Credit Applications
+            &copy; 2023 - Credit Applications Intranet
         </div>
     </footer>
 
