--- a/CreditApplications.Intranet/Views/Shared/_LoginPartial.cshtml
+++ b/CreditApplications.Intranet/Views/Shared/_LoginPartial.cshtml
@@ -26,6 +26,6 @@
 }
 else
 {
-    <a type="button" class="btn btn-outline-light me-2" id="login" asp-area="Identity" asp-page="/Account/Login">Zaloguj</a>
-    <a type="button" class="btn btn-warning" id="register" asp-area="Identity" asp-page="/Account/Register">Zarejestruj</a>
+    <a type="button" class="btn btn-outline-warning me-2" id="login" asp-area="Identity" asp-page="/Account/Login">Zaloguj</a>
+    <a type="button" class="btn btn-outline-light" id="register" asp-area="Identity" asp-page="/Account/Register">Zarejestruj</a>
 }
