--- a/CreditApplications.Intranet/Views/Article/Create.cshtml
+++ b/CreditApplications.Intranet/Views/Article/Create.cshtml
@@ -12,37 +12,37 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             
-            <div class="form-group">
+            <div class="form-group mt-3">
                 <label asp-for="ArticleModel.PageId" class="control-label"></label>
                 <select asp-for="ArticleModel.PageId" asp-items="Model.SelectLists.AvailablePagesSelectList" class="form-control"></select>
                 <span asp-validation-for="ArticleModel.PageId" class="text-danger"></span>
             </div>
 
-            <div class="form-group">
+            <div class="form-group mt-3">
                 <label asp-for="ArticleModel.Title" class="control-label"></label>
                 <input asp-for="ArticleModel.Title" class="form-control" />
                 <span asp-validation-for="ArticleModel.Title" class="text-danger"></span>
             </div>
 
-            <div class="form-group">
+            <div class="form-group mt-3">
                 <label asp-for="ArticleModel.Body" class="control-label"></label>
                 <textarea class="form-control" aria-label="Textarea" asp-for="ArticleModel.Body"></textarea>
                 <span asp-validation-for="ArticleModel.Body" class="text-danger"></span>
             </div>
             
-            <div class="form-group">
+            <div class="form-group mt-3">
                 <label asp-for="ArticleModel.LinkTitle" class="control-label"></label>
                 <input asp-for="ArticleModel.LinkTitle" class="form-control" />
                 <span asp-validation-for="ArticleModel.LinkTitle" class="text-danger"></span>
             </div>
 
-            <div class="form-group">
+            <div class="form-group mt-3">
                 <label asp-for="ArticleModel.Position" class="control-label"></label>
                 <input asp-for="ArticleModel.Position" class="form-control" />
                 <span asp-validation-for="ArticleModel.Position" class="text-danger"></span>
             </div>
 
-            <div class="form-group mb-1">
+            <div class="form-group mt-3 mb-1">
                 <input type="submit" value="Utwórz" class="btn btn-secondary mt-1 me-1" />
                 <a class="btn btn-secondary mt-1 me-1" asp-action="Index">Powrót</a>
             </div>
