--- a/CreditApplications.Intranet/Views/Shared/_LayoutIdentity.cshtml
+++ b/CreditApplications.Intranet/Views/Shared/_LayoutIdentity.cshtml
@@ -20,7 +20,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - Credit Applications
+            &copy; 2023 - Credit Applications Intranet
         </div>
     </footer>
 
