--- a/CreditApplications.Intranet/Views/Intranet/Read.cshtml
+++ b/CreditApplications.Intranet/Views/Intranet/Read.cshtml
@@ -9,5 +9,5 @@
     </div>
 </div>
 <br />
-<a class="btn btn-secondary mb-1" asp-controller="Intranet" asp-action="Index" asp-route-id="@Model.ArticleModel.PageId">Powrót do strony głównej</a>
+<a class="btn btn-secondary mb-1" asp-controller="Intranet" asp-action="List" asp-route-id="@Model.ArticleModel.PageId">Powrót do strony głównej</a>
 
