--- a/CreditApplications.Intranet/Views/Page/Details.cshtml
+++ b/CreditApplications.Intranet/Views/Page/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IntranetViewModel
 
 @{
-    ViewData["Title"] = "Page details";
+    ViewData["Title"] = "Szczegóły strony";
 }
 
-<h4>Page details</h4>
+<h4>Szczegóły strony</h4>
 
 <hr />
 <div>
@@ -45,8 +45,8 @@
         </tbody>
     </table>
     <div class="form-group">
-        <a class="btn btn-secondary mt-1 me-1" asp-action="Edit" asp-route-id="@Model.PageModel.Id">Edit</a>
-        <a class="btn btn-secondary mt-1 me-1" asp-action="Index">Back to list</a>
+        <a class="btn btn-secondary mt-1 me-1" asp-action="Edit" asp-route-id="@Model.PageModel.Id">Edytuj</a>
+        <a class="btn btn-secondary mt-1 me-1" asp-action="Index">Powrót</a>
     </div>
 
 </div>
