--- a/CreditApplications.Intranet/Views/Shared/NavigationTop.cshtml
+++ b/CreditApplications.Intranet/Views/Shared/NavigationTop.cshtml
@@ -12,12 +12,12 @@
                     </a>
                 </li>
                 <li> 
-                    <a class="nav-link px-2 @Html.IsActiveTextSecondary("Page", "Index")" asp-controller="Page" asp-action="Index">
+                    <a class="nav-link px-2 @Html.IsActiveTextSecondary("Page", "")" asp-controller="Page" asp-action="Index">
                         Zarządzanie stronami
                     </a>
                 </li>
                 <li> 
-                    <a class="nav-link px-2 @Html.IsActiveTextSecondary("Article", "Index")" asp-controller="Article" asp-action="Index">
+                    <a class="nav-link px-2 @Html.IsActiveTextSecondary("Article", "")" asp-controller="Article" asp-action="Index">
                         Zarządzanie artykułami
                     </a>
                 </li>
