--- a/CreditApplications.Intranet/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/CreditApplications.Intranet/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -5,14 +5,14 @@
     }
     else
     {
-        Layout = "/Areas/Identity/Pages/_Layout.cshtml";
+        Layout = "/Views/Shared/_LayoutIdentity.cshtml";
     }
 }
 
-<h1>Manage your account</h1>
+<h4>Ustawienia użytkownika</h4>
 
 <div>
-    <h2>Change your account settings</h2>
+    <h5>Zarządzanie ustawieniami użytkownika</h5>
     <hr />
     <div class="row">
         <div class="col-md-3">
