--- a/CreditApplications.Intranet/Views/Article/Create.cshtml
+++ b/CreditApplications.Intranet/Views/Article/Create.cshtml
@@ -43,7 +43,7 @@
             </div>
 
             <div class="form-group mt-3 mb-1">
-                <input type="submit" value="Utwórz" class="btn btn-secondary mt-1 me-1" />
+                <input type="submit" value="Dodaj" class="btn btn-secondary mt-1 me-1" />
                 <a class="btn btn-secondary mt-1 me-1" asp-action="Index">Powrót</a>
             </div>
         </form>
