--- a/CreditApplications.Intranet/Views/Page/Create.cshtml
+++ b/CreditApplications.Intranet/Views/Page/Create.cshtml
@@ -1,45 +1,45 @@
 ﻿@model IntranetViewModel
 
 @{
-    ViewData["Title"] = "Create page";
+    ViewData["Title"] = "Dodaj stronę";
     Layout = "_Layout";
 }
 
 <div>
-    <h4>Create page</h4>
+    <h4>Dodaj stronę</h4>
     <hr />
-    <div class="col-md-4">
+    <div class="container-fluid">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             
 
-            <div class="form-group">
+            <div class="form-group mt-3">
                 <label asp-for="PageModel.Title" class="control-label"></label>
                 <input asp-for="PageModel.Title" class="form-control" />
                 <span asp-validation-for="PageModel.Title" class="text-danger"></span>
             </div>
 
-            <div class="form-group">
+            <div class="form-group mt-3">
                 <label asp-for="PageModel.Body" class="control-label"></label>
                 <input asp-for="PageModel.Body" class="form-control" />
                 <span asp-validation-for="PageModel.Body" class="text-danger"></span>
             </div>
             
-            <div class="form-group">
+            <div class="form-group mt-3">
                 <label asp-for="PageModel.LinkTitle" class="control-label"></label>
                 <input asp-for="PageModel.LinkTitle" class="form-control" />
                 <span asp-validation-for="PageModel.LinkTitle" class="text-danger"></span>
             </div>
 
-            <div class="form-group">
+            <div class="form-group mt-3">
                 <label asp-for="PageModel.Position" class="control-label"></label>
                 <input asp-for="PageModel.Position" class="form-control" />
                 <span asp-validation-for="PageModel.Position" class="text-danger"></span>
             </div>
 
-            <div class="form-group">
-                <input class="btn btn-secondary mt-1 me-1" type="submit" value="Create" />
-                <a class="btn btn-secondary mt-1 me-1" asp-action="Index">Back to list</a>
+            <div class="form-group mt-3 m-b1">
+                <input class="btn btn-secondary mt-1 me-1" type="submit" value="Dodaj" />
+                <a class="btn btn-secondary mt-1 me-1" asp-action="Index">Powrót</a>
             </div>
         </form>
     </div>
