--- a/CreditApplications.Intranet/Views/Page/Delete.cshtml
+++ b/CreditApplications.Intranet/Views/Page/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model IntranetViewModel
 
 @{
-    ViewData["Title"] = "Delete page";
+    ViewData["Title"] = "Usuń stronę";
 }
 
-<h4>Delete page</h4>
+<h4>Usuń stronę</h4>
 
-<h5>Are you sure you want to delete this?</h5>
+<h5>Potwierdź usunięcie strony:</h5>
 <hr />
 <div>
     <table class="table table-hover">
@@ -48,7 +48,7 @@
 
     <form asp-action="Delete">
         <input type="hidden" asp-for="PageModel.Id" />
-        <input type="submit" value="Delete" class="btn btn-danger mt-1 me-1" />
-        <a class="btn btn-secondary mt-1 me-1" asp-action="Index">Back to list</a>
+        <input type="submit" value="Usuń" class="btn btn-danger mt-1 me-1" />
+        <a class="btn btn-secondary mt-1 me-1" asp-action="Index">Powrót</a>
     </form>
 </div>
