--- a/CreditApplications.Intranet/Views/Page/Edit.cshtml
+++ b/CreditApplications.Intranet/Views/Page/Edit.cshtml
@@ -1,42 +1,42 @@
 ﻿@model IntranetViewModel
 
 @{
-    ViewData["Title"] = "Edit page";
+    ViewData["Title"] = "Edytuj stronę";
     Layout = "_Layout";
 }
 
 <div>
-    <h4>Edit page</h4>
+    <h4>Edytuj stronę</h4>
     <hr />
-    <div class="col-md-4">
+    <div class="container-fluid">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="PageModel.Id" />
 
-            <div class="form-group">
+            <div class="form-group mt-3">
                 <label asp-for="PageModel.Title" class="control-label"></label>
                 <input asp-for="PageModel.Title" class="form-control" />
                 <span asp-validation-for="PageModel.Title" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mt-3">
                 <label asp-for="PageModel.Body" class="control-label"></label>
                 <input asp-for="PageModel.Body" class="form-control" />
                 <span asp-validation-for="PageModel.Body" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mt-3">
                 <label asp-for="PageModel.LinkTitle" class="control-label"></label>
                 <input asp-for="PageModel.LinkTitle" class="form-control" />
                 <span asp-validation-for="PageModel.LinkTitle" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mt-3">
                 <label asp-for="PageModel.Position" class="control-label"></label>
                 <input asp-for="PageModel.Position" class="form-control" />
                 <span asp-validation-for="PageModel.Position" class="text-danger"></span>
             </div>
 
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-secondary mt-1 me-1" />
-                <a class="btn btn-secondary mt-1 me-1" asp-action="Index">Back to list</a>
+            <div class="form-group mt-3 mb-1">
+                <input type="submit" value="Zapisz" class="btn btn-secondary mt-1 me-1" />
+                <a class="btn btn-secondary mt-1 me-1" asp-action="Index">Powrót</a>
             </div>
         </form>
     </div>
