--- a/CreditApplications.Intranet/Views/Shared/_LoginPartial.cshtml
+++ b/CreditApplications.Intranet/Views/Shared/_LoginPartial.cshtml
@@ -16,7 +16,7 @@
                     <a class="dropdown-item" id="manage" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Ustawienia użytkownika</a>
                 </li>
                 <li>
-                    <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Intranet", new { area = "" })">
+                    <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("List", "Intranet", new { area = "" })">
                         <button id="logout" type="submit" class="dropdown-item">Wyloguj</button>
                     </form>
                 </li>
