--- a/CreditApplications.Intranet/Views/Page/Delete.cshtml
+++ b/CreditApplications.Intranet/Views/Page/Delete.cshtml
@@ -21,10 +21,10 @@
             </tr>
             <tr>
                 <th scope="row">
-                    @Html.DisplayNameFor(model => model.PageModel.Body)
+                    @Html.DisplayNameFor(model => model.PageModel.Description)
                 </th>
                 <td>
-                    @Html.DisplayFor(model => model.PageModel.Body)
+                    @Html.DisplayFor(model => model.PageModel.Description)
                 </td>
             </tr>
             <tr>
