--- a/CreditApplications.Intranet/Views/Page/Edit.cshtml
+++ b/CreditApplications.Intranet/Views/Page/Edit.cshtml
@@ -19,9 +19,9 @@
                 <span asp-validation-for="PageModel.Title" class="text-danger"></span>
             </div>
             <div class="form-group mt-3">
-                <label asp-for="PageModel.Body" class="control-label"></label>
-                <input asp-for="PageModel.Body" class="form-control" />
-                <span asp-validation-for="PageModel.Body" class="text-danger"></span>
+                <label asp-for="PageModel.Description" class="control-label"></label>
+                <input asp-for="PageModel.Description" class="form-control" />
+                <span asp-validation-for="PageModel.Description" class="text-danger"></span>
             </div>
             <div class="form-group mt-3">
                 <label asp-for="PageModel.LinkTitle" class="control-label"></label>
