--- a/CreditApplications.Intranet/Views/Shared/NavigationLeft.cshtml
+++ b/CreditApplications.Intranet/Views/Shared/NavigationLeft.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IntranetViewModel
 
 <div class="flex-shrink-0 p-3" style="width: 280px;">
-    <div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary" style="width: 280px;">
+    <div class="d-flex flex-column flex-shrink-0 p-3" style="width: 280px;">
         <ul class="nav nav-pills flex-column mb-auto">
             @foreach (var item in Model.Pages)
             {
