--- a/CreditApplications.Intranet/Views/Shared/NavigationTopIdentity.cshtml
+++ b/CreditApplications.Intranet/Views/Shared/NavigationTopIdentity.cshtml
@@ -1,9 +1,8 @@
 ﻿<header class="p-3 text-bg-dark fixed-top">
     <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-            <a class="navbar-brand" asp-area="" asp-controller="Intranet" asp-action="List" asp-route-id=""><i class="fas fa-university"></i> Credit Applications</a>
+            <a class="navbar-brand me-4" asp-area="" asp-controller="Intranet" asp-action="List" asp-route-id=""><i class="fas fa-university"></i> Credit Applications <i class="fas fa-university"></i></a>
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-
                 <li>
                     <a class="nav-link px-2 @Html.IsActiveTextSecondary("Intranet", "")" asp-controller="Intranet" asp-action="List" asp-route-id="">
                         Przeglądanie intranetu
