--- a/CreditApplications.Intranet/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/CreditApplications.Intranet/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -1,10 +1,10 @@
 ﻿@page
 @model ForgotPasswordConfirmation
 @{
-    ViewData["Title"] = "Forgot password confirmation";
+    ViewData["Title"] = "Odzyskiwanie hasła";
 }
 
-<h1>@ViewData["Title"]</h1>
-<p>
-    Please check your email to reset your password.
-</p>
+<h4>@ViewData["Title"]</h4>
+<div>
+    Sprawdź skrzynkę email.
+</div>
