--- a/CreditApplications.Intranet/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/CreditApplications.Intranet/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -1,11 +1,11 @@
 ﻿@page
 @model ChangePasswordModel
 @{
-    ViewData["Title"] = "Change password";
+    ViewData["Title"] = "Zmiana hasła";
     ViewData["ActivePage"] = ManageNavPages.ChangePassword;
 }
 
-<h3>@ViewData["Title"]</h3>
+<h4>@ViewData["Title"]</h4>
 <partial name="_StatusMessage" for="StatusMessage" />
 <div class="row">
     <div class="col-md-6">
@@ -26,7 +26,7 @@
                 <label asp-for="Input.ConfirmPassword" class="form-label"></label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Update password</button>
+            <button type="submit" class="w-100 btn btn-secondary">Zapisz nowe hasło</button>
         </form>
     </div>
 </div>
