--- a/CreditApplications.Intranet/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
+++ b/CreditApplications.Intranet/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
@@ -1,33 +1,33 @@
 ﻿@page
 @model DeletePersonalDataModel
 @{
-    ViewData["Title"] = "Delete Personal Data";
+    ViewData["Title"] = "Usuń dane użytkownika";
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
 }
 
-<h3>@ViewData["Title"]</h3>
+<h4>@ViewData["Title"]</h4>
+<div class="col-md-6">
+    <div class="alert alert-warning" role="alert">
+        <p>
+            <strong>Usunięcie danych spowoduje usunięcie konta użytkownika i nie może zostać cofnięte.</strong>
+        </p>
+    </div>
 
-<div class="alert alert-warning" role="alert">
-    <p>
-        <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
-    </p>
+    <div>
+        <form id="delete-user" method="post">
+            <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
+            @if (Model.RequirePassword)
+            {
+                <div class="form-floating mb-3">
+                    <input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" placeholder="Podaj hasło." />
+                    <label asp-for="Input.Password" class="form-label"></label>
+                    <span asp-validation-for="Input.Password" class="text-danger"></span>
+                </div>
+            }
+            <button class="w-100 btn btn-danger" type="submit">Usuń dane oraz konto użytkownika</button>
+        </form>
+    </div>
 </div>
-
-<div>
-    <form id="delete-user" method="post">
-        <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-        @if (Model.RequirePassword)
-        {
-            <div class="form-floating mb-3">
-                <input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" placeholder="Please enter your password." />
-                <label asp-for="Input.Password" class="form-label"></label>
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
-            </div>
-        }
-        <button class="w-100 btn btn-lg btn-danger" type="submit">Delete data and close my account</button>
-    </form>
-</div>
-
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
