--- a/CreditApplications.Intranet/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/CreditApplications.Intranet/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -1,24 +1,22 @@
 ﻿@page
 @model PersonalDataModel
 @{
-    ViewData["Title"] = "Personal Data";
+    ViewData["Title"] = "Dane o użytkowniku";
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
 }
 
-<h3>@ViewData["Title"]</h3>
+<h4>@ViewData["Title"]</h4>
 
 <div class="row">
     <div class="col-md-6">
-        <p>Your account contains personal data that you have given us. This page allows you to download or delete that data.</p>
+        <p>Twoje konto zawiera Twoje dane osobowe, które nam przekazałeś. Na tej stronie możesz pobrać lub usunąć swoje dane.</p>
         <p>
-            <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
+            <strong>Usunięcie Twoich danych usunie nieodwracalnie Twoje konto użytkownika. Usunięte konto nie będzie mogło zostać przywrócone.</strong>
         </p>
         <form id="download-data" asp-page="DownloadPersonalData" method="post">
-            <button class="btn btn-primary" type="submit">Download</button>
+            <button class="w-100 btn btn-secondary" type="submit">Pobierz dane</button>
         </form>
-        <p>
-            <a id="delete" asp-page="DeletePersonalData" class="btn btn-danger">Delete</a>
-        </p>
+        <a id="delete" asp-page="DeletePersonalData" class="w-100 btn btn-danger">Usuń dane</a>
     </div>
 </div>
 
