--- a/CreditApplications.Intranet/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/CreditApplications.Intranet/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model PersonalDataModel
 @{
-    ViewData["Title"] = "Dane o użytkowniku";
+    ViewData["Title"] = "Dane użytkownika";
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
 }
 
@@ -14,7 +14,7 @@
             <strong>Usunięcie Twoich danych usunie nieodwracalnie Twoje konto użytkownika. Usunięte konto nie będzie mogło zostać przywrócone.</strong>
         </p>
         <form id="download-data" asp-page="DownloadPersonalData" method="post">
-            <button class="w-100 btn btn-secondary" type="submit">Pobierz dane</button>
+            <button class="w-100 btn btn-secondary mb-1" type="submit">Pobierz dane</button>
         </form>
         <a id="delete" asp-page="DeletePersonalData" class="w-100 btn btn-danger">Usuń dane</a>
     </div>
