--- a/CreditApplications.Intranet/Views/Shared/_LayoutIdentity.cshtml
+++ b/CreditApplications.Intranet/Views/Shared/_LayoutIdentity.cshtml
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="~/css/after-bootstrap.css" />
 </head>
 <body>
-    <partial name="NavigationTopIdentity" />
+    <partial name="NavigationTopNotLoggedIn" />
 
     <main class="container d-flex flex-nowrap">
         <div class="container" role="main">
