--- a/CreditApplications.Intranet/Views/Page/Create.cshtml
+++ b/CreditApplications.Intranet/Views/Page/Create.cshtml
@@ -21,7 +21,7 @@
 
             <div class="form-group mt-3">
                 <label asp-for="PageModel.Description" class="control-label"></label>
-                <input asp-for="PageModel.Description" class="form-control" />
+                <textarea class="form-control" style="height: 200px" aria-label="Textarea" asp-for="PageModel.Description"></textarea>
                 <span asp-validation-for="PageModel.Description" class="text-danger"></span>
             </div>
             
