Add user roles authorization

--- a/CreditApplications.Intranet/Views/Intranet/Search.cshtml
+++ b/CreditApplications.Intranet/Views/Intranet/Search.cshtml
@@ -13,6 +13,6 @@
     }
     else
     {
-        <p class="ms-3 text-warning">Nie znaleziono żadnych artykułów spełniających kryteria wyszukiwania.</p>
+        <p class="ms-3 text-danger">Nie znaleziono żadnych artykułów spełniających kryteria wyszukiwania.</p>
     }
 </div>
