--- a/CreditApplications.Intranet/Views/Shared/NotFound.cshtml
+++ b/CreditApplications.Intranet/Views/Shared/NotFound.cshtml
@@ -1,7 +1,8 @@
-﻿
+﻿@model IntranetViewModel
+
 @{
-    ViewData["Title"] = "Not Found";
+    ViewData["Title"] = "Nie znaleziono";
 }
 
-<h1 class="text-danger">Not Found.</h1>
-<h2 class="text-danger">This is not the page or resource you are looking for...</h2>
+<h4 class="text-danger mt-2">Błąd!</h4>
+<h5 class="text-danger mt-1">Nie znaleziono żądanej strony.</h5>
