--- a/CreditApplications.Intranet/Views/Article/Delete.cshtml
+++ b/CreditApplications.Intranet/Views/Article/Delete.cshtml
@@ -16,7 +16,7 @@
                     @Html.DisplayNameFor(model => model.ArticleModel.PageId)
             </th>
             <td>
-                    @Html.DisplayFor(model => model.ArticleModel.PageId)
+                    @Html.DisplayFor(model => model.ArticleModel.Page.LinkTitle)
             </td>
         </tr>
         <tr>
@@ -29,18 +29,18 @@
         </tr>
         <tr>
             <th scope="row">
-                    @Html.DisplayNameFor(model => model.ArticleModel.Body)
-            </th>
-            <td>
-                    @Html.DisplayFor(model => model.ArticleModel.Body)
-            </td>
-        </tr>
-        <tr>
-            <th scope="row">
                     @Html.DisplayNameFor(model => model.ArticleModel.LinkTitle)
             </th>
             <td>
                     @Html.DisplayFor(model => model.ArticleModel.LinkTitle)
+            </td>
+        </tr>
+        <tr>
+            <th scope="row">
+                    @Html.DisplayNameFor(model => model.ArticleModel.Body)
+            </th>
+            <td>
+                    @Html.DisplayFor(model => model.ArticleModel.Body)
             </td>
         </tr>
         <tr>
