--- a/CreditApplications.Web/Views/CreditApplication/Create.cshtml
+++ b/CreditApplications.Web/Views/CreditApplication/Create.cshtml
@@ -5,9 +5,7 @@
     Layout = "_Layout";
 }
 
-<h4>Create</h4>
-
-<h4>Credit application</h4>
+<h4>Create credit application</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
